# candy

./: CMakeLists.txt  README.md
examples/: echo_client.c  echo_server.c
include/candy/: candy.h  candy_array.h  candy_buffer.h  candy_cycle_buffer.h  candy_log.h  candy_net_int.h  candy_queue.h  candy_sleep.h  candy_thread.h  candy_thread_pool.h
linux/: Makefile  install.sh
src/: CMakeLists.txt  candy.h  def.h
src/aio/: candy.c  candy_aio.c  candy_aio.h  candy_aio_pool.c  candy_aio_pool.h  candy_context.c  candy_context.h  candy_net.c  candy_net.h  candy_poller.c  candy_poller.h  candy_poller_epoll.h  candy_poller_epoll.inc  candy_poller_select.h  candy_poller_select.inc  candy_socket.c  candy_socket.h  candy_timer.c  candy_timer.h  candy_timer_pool.c  candy_timer_pool.h  candy_timerset.c  candy_timerset.h  candy_worker.c  candy_worker.h  candy_worker_pool.c  candy_worker_pool.h
src/base/: candy_array.c  candy_array.h  candy_buffer.c  candy_buffer.h  candy_cycle_buffer.c  candy_cycle_buffer.h  candy_error.h  candy_export.h  candy_glock.c  candy_glock.h  candy_log.c  candy_log.h  candy_net_int.c  candy_net_int.h  candy_queue.c  candy_queue.h  candy_sleep.c  candy_sleep.h  candy_socket.h  candy_thread.c  candy_thread.h  candy_thread_pool.c  candy_thread_pool.h  candy_thread_posix.h  candy_thread_posix.inc  candy_thread_win.h  candy_thread_win.inc  candy_timer.c  candy_timer.h  candy_window.h
src/core/: candy.c  candy_context.c  candy_context.h
src/http/: candy_http_server.c  candy_http_server.h
src/test/: client.c  server.c
win/: Makefile  loger.txt
